--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
-    <display-name>SpringMVCHello</display-name>
+    <display-name>Spring RESTful Demo</display-name>
 
     <servlet>
         <servlet-name>spring-mvc</servlet-name>
@@ -19,7 +19,9 @@
         <servlet-name>spring-mvc</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-
+    <welcome-file0list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file0list>
 
 
     <filter>
